# unimock

./: CHANGES  CMakeLists.txt  LICENSE.TXT  README
examples/: CMakeLists.txt
examples/ChefRobot/: CMakeLists.txt  ChefRobot.cc  ChefRobot.hh  CoolFood.cc  CoolFood.hh  Dish.cc  Dish.hh  GasStove3000.cc  GasStove3000.hh  IRefrigerator.hh  IStove.hh  Main.cc  TestFramework.cc  TestFramework.hh
include/unimock/: CallRecorder.hh  CallRecorder.tcc  DefaultConversionPolicy.hh  DefaultConversionPolicy.tcc  FiniteID.hh  FiniteID.icc  FunctionMock.hh  FunctionMock.tcc  FunctorMock.hh  FunctorMock.tcc  MinimalConversionPolicy.hh  MinimalConversionPolicy.tcc  Mock.hh  Mock.tcc  ResultSet.hh  ResultSet.tcc  ResultSetFactory.hh  ResultSetFactory.tcc
include/unimock/Internal/: ArgumentTuple.hh  ArgumentTuple.tcc  ArgumentTupleI.hh  FunctionMap.hh  FunctionMap.tcc
test/: CMakeLists.txt  CallRecorderTest.cc  FunctionMockTest.cc  FunctorMockTest.cc  MockTest.cc  ResultSetFactoryTest.cc  Test.hh  TestMain.cc
