#
#   CMakeLists.txt
#
#   Copyright (c) 2015 Daniel Markus
#
#   This file is part of the Unimock library that is distributed under the
#   University of Illinois/NCSA Open Source License (NCSA). See accompanying
#   file LICENSE.TXT for details.
#
#_______________________________________________________________________________


add_subdirectory( ChefRobot )

